# health-report-generator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
cli/: main.py  run.py
src/: config.py
src/domain/: change_report.py  generate_report.py  get_report.py  send_report.py
src/domain/common/: models.py
src/entities/: health_data.py  report.py  user.py
src/infra/db/common/: models.py
src/infra/routers/: base_router.py  reports.py
src/settings/: postgres.py
