[project]
name = "generation-health-reports"
version = "0.1.0"
description = "Сервис для работы с отчетами о здоровье пользователей"
authors = [
    {name = "ParkieV",email = "st-psk@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "typer (>=0.15.4,<0.16.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["*_test.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

markers = [
    "e2e: end-to-end tests"
]

addopts = "--strict-markers --maxfail=1"